junction-python/samples/http_simple_split/k8s_jct_http_server_feature_1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jct-http-server-feature-1
  labels:
    app: jct-http-server-feature-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jct-http-server-feature-1
  template:
    metadata:
      labels:
        app: jct-http-server-feature-1
    spec:
      containers:
      - name: jct-http-server-feature-1
        image: jct_http_server:latest
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: jct-http-server-feature-1
spec:
  type: ClusterIP
  selector:
    app: jct-http-server-feature-1
  ports:
    - port: 8008
      targetPort: 8008
