junction-python/samples/http_simple_split/k8s_gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jct-http-server-routes
spec:
  parentRefs:
    - kind: Service
      name: jct-http-server
  rules:
    - matches:
        - path:
            value: /feature-1/index
      backendRefs:
        - kind: Service
          name: jct-http-server
          port: 8008
          weight: 90
        - kind: Service
          name: jct-http-server-feature-1
          port: 8008
          weight: 10
    - backendRefs:
        - kind: Service
          name: jct-http-server
          port: 8008
          weight: 100
